<resources>
    <string name="app_name">小睆天气</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_choice_city">ChoiceCityActivity</string>
    <string name="choicecity">选择城市</string>
    <string name="addcity">添加城市</string>
    <string name="set">设置</string>
    <string name="SmallWeather">小天气</string>
    <string name="about">关于</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="suggesttion1">穿衣指数---</string>
    <string name="suggesttion2">运动指数---</string>
    <string name="suggesttion3">旅游指数---</string>
    <string name="suggesttion4">感冒指数---</string>
    <string name="aboutone">小天气\n github地址：https://github.com/fangxiaogang</string>

    <string name="title_activity_first">FirstActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
